[package]
name = "hdbscan_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] } 
clap = { version = "4.3.11", features = ["derive"] }

[lib]
name = "hdbscan_rs"
path = "src/lib.rs"
